# RAIS

./: .env.local.example  .gitignore  AGENTS.md  ARTIFACTS_SUMMARY.md  DESIGN-IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  PREMIUM-DESIGN-REFERENCE.md  UI-Design Context.md  package-lock.json  package.json  prompt.md  tailwind.config.ts  vitest.config.ts
.sisyphus/: boulder.json
.sisyphus/docs/: PRD.md  REDESIGN_PLAN.md  SRS.md
.sisyphus/drafts/: rais-ui-analysis.md  supabase-migration.md  ui-enhancement-complete.md  ulw-master-plan.md
.sisyphus/plans/: enhancement-test-plan.md  implementation-plan-focused.md  implementation-plan.md  supabase-migration.md  ui-enhancement.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  schemas.py
backend/app/pipelines/: __init__.py  computation.py  parser.py  validator.py
backend/app/routers/: __init__.py  stats.py  upload.py
backend/tests/: __init__.py  test_cors.py  test_pipelines.py
scripts/: analyze_files.js  debug_defects.js  inspect_data.js  map_excel.js  seed-data.sql  setup-db.sql  test_session_flow.js
src/app/: AGENTS.md  globals.css  layout.tsx  page.module.css  page.tsx
src/components/: KPICard.module.css  KPICard.tsx  RiskBadge.module.css  RiskBadge.tsx  Sidebar.module.css  Sidebar.tsx  SlidePanel.module.css  SlidePanel.tsx  TopBar.module.css  TopBar.tsx  TopNav.module.css  TopNav.tsx
src/lib/: utils.ts  (+1 more)
supabase/: README.md  schema.sql
uploads/: .gitkeep
(+120 files in other folders)
