[tool.poetry]
name = "rais-backend"
version = "0.1.0"
description = "RAIS Dashboard Python Backend - Data Processing Pipeline"
authors = ["RAIS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pandas = "^2.2.0"
openpyxl = "^3.1.5"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.19"
plotly = "^5.24.0"
kaleido = "0.2.1"
sqlalchemy = "^2.0.46"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
